# IN204-Projet

./: .gitignore  CMakeLists.txt  IN204.depend  IN204.layout  Makefile  README.md
IN204/: IN204.cbp  IN204.depend  IN204.layout  README.md  main.cpp  network.cpp  readme.txt.txt
IN204/Include/: gameClass.hpp  network.hpp  variables.hpp
IN204/Sources/: compiler.sh  compiler_client.sh  compiler_server.sh  gameClass.cpp  main.cpp  main_client.cpp  main_original.cpp  main_server.cpp  network.cpp  network.hpp  note.txt  sockets.cpp
IN204/Sources/TCP/: note.txt
IN204/Sources/TCP final/: compiler.sh  main.cpp  network.hpp
IN204/src/: gameClass.cpp  main.cpp
Include/: gameClass.hpp  gameClass_alternative.hpp  network.hpp  variables.hpp
Sources/: gameClass.cpp  main.cpp  network.cpp  run.sh  test.cpp
include/: gameClass.hpp
src/: main.cpp
